- Complete partial function of server